# runeascend-platform

./: .dockerignore  Dockerfile  README.md  grafana-dashboard.json  makefile  makefile.pipeline  pyproject.toml
.github/workflows/: prcheck.yml  publish.yml
migrations/: 1__osrs_hf_opp.sql  1__osrs_mf_opp.sql  1__osrs_mkt_data.sql  1__osrs_savant_cancel_events.sql  1__osrs_savant_fill_events.sql  1__osrs_savant_order_events.sql  1__osrs_savant_orders.sql  1__osrs_sweeps.sql  1__rs_buys.sql  1__rs_sells.sql
runeascend/common/: clickhouse.py  config.py  http.py
runeascend/runeservant/: bot.py  seeker.py
runeascend/runespreader/: archiver.py  publisher.py  spreader.py
runeascend/runevault/: consumer.py  models.py  vault.py
runespreader/: bot.py  clickhouse.py  consumer.py  decoder.py  main.py  publisher.py  spreader.py  spreadfinder.py  watcher.py
runespreader/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  spreadfinder-checkpoint.py
schemas/: osrs-hf-opp.json  osrs-mf-opp.json  osrs-mkt-data.json  osrs-savant-cancel.json  osrs-savant-fill.json  osrs-savant-order.json  osrs-sweeps.json
service_templates/: osrs_bot.service  osrs_market_capture.service  osrs_message_capture.service  osrs_pubisher.service  osrs_spreadfinder.service  osrs_vault.service
tests/: nlp_test.py  runespreader_mock.py
tests/e2e/containers/: redpanda.py  runeascend.py
tests/e2e/runevault/: consumer_test.py
tests/fixtures/runespreader/: runespreader_mock.py
tests/runeservant/: nlp_test.py
