[tool.poetry]
name = "runespreader"
version = "0.1.13"
description = ""
authors = ["Charles Warren <ciwarren@mtu.edu>"]
include = ["runespreader", "tests"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
clickhouse-driver = "^0.2.6"
pyyaml = "^6.0.1"
jupyter = "^1.0.0"
plotly = "^5.15.0"
typer = "^0.9.0"
discord = "^2.3.2"
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
anyio = "^3.7.1"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
spreader = "runespreader.spreaderfinder:main"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80